[gd_scene load_steps=5 format=3 uid="uid://bkxqv8ynh3cr7"]

[ext_resource type="Script" uid="uid://dp64dldqk2yjd" path="res://tests/test_cutout_mesh_instance_3d_generator_debug.gd" id="1_ei0x3"]
[ext_resource type="Script" uid="uid://bgbcnqyyqy8so" path="res://addons/cutout/nodes/cutout_mesh_instance_3d.gd" id="2_mcvwn"]
[ext_resource type="Script" uid="uid://cdqbomcwoseit" path="res://addons/cutout/resources/cutout_mesh.gd" id="3_dpgt7"]

[sub_resource type="Resource" id="Resource_hm0gp"]
script = ExtResource("3_dpgt7")
metadata/_custom_type_script = "uid://cdqbomcwoseit"

[node name="TestCutoutMeshInstance3D" type="Node3D"]
script = ExtResource("1_ei0x3")

[node name="CutoutMeshInstance3D" type="Node3D" parent="."]
script = ExtResource("2_mcvwn")
cutout_mesh = SubResource("Resource_hm0gp")

[node name="__CutoutMesh__" type="MeshInstance3D" parent="CutoutMeshInstance3D"]
metadata/_edit_lock_ = false

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 10)
current = true
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 8, 5)
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -620.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CutoutMeshInstance3D Debug"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureSection" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Texture Source"

[node name="TexturePathContainer" type="HBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection"]
layout_mode = 2

[node name="TexturePath" type="LineEdit" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection/TexturePathContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "res://path/to/texture.png"
expand_to_text_length = true

[node name="BrowseTextureButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection/TexturePathContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse..."

[node name="CreateFromTextureButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Create CutoutMesh from Texture"

[node name="SaveCutoutMeshButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/TextureSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Save CutoutMesh..."

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreationParamsLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Creation Parameters (requires recreate)"

[node name="AlphaThresholdContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AlphaThresholdLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/AlphaThresholdContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Alpha Threshold: 0.50"

[node name="AlphaThresholdSlider" type="HSlider" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/AlphaThresholdContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="DetailThresholdContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DetailThresholdLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/DetailThresholdContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Detail Threshold: 1.0"

[node name="DetailThresholdSlider" type="HSlider" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/DetailThresholdContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MeshPropsLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Mesh Properties (live update)"

[node name="DepthContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DepthLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/DepthContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Depth: 1.00"

[node name="DepthSlider" type="HSlider" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/DepthContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0

[node name="MeshSizeContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MeshSizeLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/MeshSizeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mesh Size: 5.00"

[node name="MeshSizeSlider" type="HSlider" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/MeshSizeContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.1
value = 5.0

[node name="ExtrusionScaleContainer" type="VBoxContainer" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExtrusionScaleLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/ExtrusionScaleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Extrusion Scale: 1.00"

[node name="ExtrusionScaleSlider" type="HSlider" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer/ExtrusionScaleContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InstanceManagementLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Instance Management"

[node name="ToggleSharingButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mode: Shared Resource"

[node name="SpawnInstanceButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spawn Instance"

[node name="ClearInstancesButton" type="Button" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Spawned Instances"

[node name="HSeparator5" type="HSeparator" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="CanvasLayer/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls: Arrow keys to rotate camera, Up/Down to move"
autowrap_mode = 2

[node name="DebugInfoPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DebugInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DebugInfoLabel" type="RichTextLabel" parent="CanvasLayer/DebugInfoPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[b]Debug Information[/b]

Waiting for CutoutMesh creation..."
fit_content = true
scroll_following = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "Select"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.svg, *.webp ; Image Files")

[node name="SaveFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Save CutoutMesh Resource"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.tres ; Godot Resource Files")
